--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ org.gradle.parallel=true
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.19.4
 	yarn_mappings=1.19.4+build.1
-	loader_version=0.14.17
+	loader_version=0.14.19
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = net.poka.freCanon
+	archives_base_name = freCanonMod
 
 # Dependencies
-	fabric_version=0.75.3+1.19.4
+	fabric_version=0.77.0+1.19.4
